--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,7 +3,7 @@ name: Go package
 on: [push]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     steps:
@@ -15,4 +15,4 @@ jobs:
           go-version: 1.19
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v ./... -cover
